@@ -7,6 +7,6 @@
   <IMG align=center BORDER=0 SRC="rtems_logo.jpg" ALT="RTEMS"> </A>
 
 <P><big>Congratulations, you have successfully loaded your first page
-from the @SERVER@ running on RTEMS.</big></P>
+from the GoAhead webserver running on RTEMS.</big></P>
 </center>
 </BODY></HTML>
