@@ -1,1 +1,2 @@
 index.html
+shttpd.png
