@@ -1,0 +1,34 @@
+<HTML>
+<HEAD><TITLE>RTEMS Simple HTTPD Web Server Test Page</TITLE></HEAD>
+<BODY BGCOLOR="FFFFFF">
+<table>
+<tr>
+  <td width="40%">
+    <A HREF="http://www.rtems.org">
+      <IMG align=right BORDER=0 SRC="rtems_logo.jpg" ALT="RTEMS"> </A>
+  <td>
+  <td width="20%"></td>
+  <td width="40%">
+    <A HREF="http://http://shttpd.sourceforge.net/">
+      <IMG align=left BORDER=0 SRC="shttpd.png" ALT="Simple HTTPD"> </A>
+  <td>
+  <td width="10%"></td>
+</tr>
+</table>
+<BIG>
+<P>Congratulations, you have successfully loaded your first page
+from the Simple HTTPD Web Server running on RTEMS.
+</P>
+
+</P>
+This RTEMS program includes some dynamic web pages.  Check
+out the following links for examples:
+</P>
+<UL>
+  <LI><A HREF="queries?cpuuse_report">CPU Usage -- Report</LI>
+  <LI><A HREF="queries?cpuuse_reset">CPU Usage -- Reset</LI>
+  <LI><A HREF="queries?stackuse_report">Stack Usage -- Report</LI>
+</UL>
+</big>
+
+</BODY></HTML>
